--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color">
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -188,6 +189,8 @@ id="profile-mini-pic-img"
           class="user-profile-pic"
           id="user-profile-pic"
           src="./images/127290963.png"
+          
+
           alt="user profile pic"
         />
         <p class="user-name">Bayan Ghaben</p>
