--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color">
+    <meta name="description" content="Github Accounts Finderm find you friends, teachers, coworkers">
+    <meta name="keywords" content="GitHub, Finder, Accounts">
+    
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
