--- a/compare.html
+++ b/compare.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Compare</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="compare.css" />
+    <title>Compare Github Accounts</title>
   </head>
-  <body>
+  <body class="body-compare">
     <!-- heaer start -->
     <header class="header">
       <div class="navbar flex">
@@ -81,6 +88,86 @@
       </div>
     </header>
     <!-- header ends -->
+    <main class="main-compare flex">
+      <!--user 1-->
+      <div class="compare-user flex">
+        <img
+          class="user-profile-pic-compare"
+          id="user-profile-pic-compare1"
+          src="./images/unnamed.jpg"
+          alt="user profile pic"
+        />
+        <div class="search-bar flex">
+          <i class="fa-solid fa-magnifying-glass search-icon1"></i>
+          <input
+            type="text"
+            class="compare-input1"
+            placeholder="Search or jump to..."
+          />
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="22"
+            height="20"
+            aria-hidden="true"
+            class="mr-1"
+          >
+            <path
+              fill="none"
+              stroke="#979A9C"
+              opacity=".4"
+              d="M3.5.5h12c1.7 0 3 1.3 3 3v13c0 1.7-1.3 3-3 3h-12c-1.7 0-3-1.3-3-3v-13c0-1.7 1.3-3 3-3z"
+            ></path>
+            <path fill="#979A9C" d="M11.8 6L8 15.1h-.9L10.8 6h1z"></path>
+          </svg>
+
+          <!-- <i class="fa-regular fa-book-open"></i> -->
+        </div>
+        <p class="user-username1">First Competitor</p>
+        <p class="repo-number-compare1">Meo</p>
+        <p class="followers-num1">Meo</p>
+        <img src="" class="result1" id="result1"></img>
+      </div>
+      <button class="compare flex">Who would win?🤔</button>
+
+      <!--user 2-->
+      <div class="compare-user flex">
+        <img
+          class="user-profile-pic-compare"
+          id="user-profile-pic-compare2"
+          src="./images/images (1).jpg"
+          alt="user profile pic"
+        />
+        <div class="search-bar flex">
+          <i class="fa-solid fa-magnifying-glass search-icon2"></i>
+          <input
+            type="text"
+            class="compare-input2"
+            placeholder="Search or jump to..."
+          />
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="22"
+            height="20"
+            aria-hidden="true"
+            class="mr-1"
+          >
+            <path
+              fill="none"
+              stroke="#979A9C"
+              opacity=".4"
+              d="M3.5.5h12c1.7 0 3 1.3 3 3v13c0 1.7-1.3 3-3 3h-12c-1.7 0-3-1.3-3-3v-13c0-1.7 1.3-3 3-3z"
+            ></path>
+            <path fill="#979A9C" d="M11.8 6L8 15.1h-.9L10.8 6h1z"></path>
+          </svg>
+        </div>
+        <p class="user-username2">Second Competitor</p>
+        <p class="repo-number-compare2">Meo</p>
+        <p class="followers-num2">Meo</p>
+        <img src="" class="result2" id="result2"></img>
+      </div>
+    </main>
 
     <!-- footer start -->
     <footer class="flex">
@@ -103,5 +190,6 @@
       </ul>
     </footer>
     <!-- footer ends -->
+    <script src="compare.js"></script>
   </body>
 </html>
