--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
               <li><a href="#">Codespaces</a></li>
               <li><a href="#">Marketplace</a></li>
               <li><a href="#"> Explore </a></li>
-              <li><a href="#"> Compare </a></li>
+              <li><a href="compare.html"> Compare </a></li>
             </ul>
           </div>
         </div>
         <div class="navbar-rightside-icons">
           <ul class="flex ul-icons">
+            
             <li>
               <i class="fa-sharp fa-regular fa-bell"></i>
             </li>
@@ -187,6 +188,7 @@ id="profile-mini-pic-img"
     </section>
     <!-- body nav Ends-->
     <main class=" main-body flex">
+      <!--User profile view-->
       <div class="user-profile flex">
         <img
           class="user-profile-pic"
