--- a/compare.html
+++ b/compare.html
@@ -124,8 +124,14 @@
           <!-- <i class="fa-regular fa-book-open"></i> -->
         </div>
         <p class="user-username1">First Competitor</p>
-        <p class="repo-number-compare1">Meo</p>
-        <p class="followers-num1">Meo</p>
+       <div class="flex">
+        <p>#Repositories: </p>
+        <p class="repo-number-compare1"> Meo</p>
+       </div>
+        <div class="flex">
+          <p>#Followers:</p>
+          <p class="followers-num1">Meo</p>
+        </div>
         <img src="" class="result1" id="result1"></img>
       </div>
       <button class="compare flex">Who would win?🤔</button>
@@ -163,8 +169,15 @@
           </svg>
         </div>
         <p class="user-username2">Second Competitor</p>
-        <p class="repo-number-compare2">Meo</p>
+       <div class="flex">
+        <p>#Repositories:</p>
+        <p class="repo-number-compare2"> Meo</p>
+       </div>
+       <div class="flex">
+        <p>#Followers:</p>
         <p class="followers-num2">Meo</p>
+
+       </div>
         <img src="" class="result2" id="result2"></img>
       </div>
     </main>
