--- a/compare.html
+++ b/compare.html
@@ -24,7 +24,7 @@
               <i class="fa-brands fa-github"></i>
             </div>
 
-            <div class="search-bar flex">
+            <div class="search-bar-nav flex">
               <i class="fa-solid fa-magnifying-glass search-icon"></i>
               <input
                 type="text"
