--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ id="profile-mini-pic-img"
           </div>
           <div class="flex language-wrapper">
             <span class="repo-language-color" style="background-color: purple;"></span>
-            <p class="repo-language">HTML</p>
+            <p class="repo-language">CSS</p>
           </div>
         </div>
         <div class="repo-item">
